objects/LAT_ReferenceProduct__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyBrandRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to KeyBrand Record</description>
        <label>KeyBrand Ref</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_KeyBrand__c</referenceTo>
        <relationshipLabel>Reference Products</relationshipLabel>
        <relationshipName>LAT_ReferenceProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Products selected</description>
        <label>SKU Ref</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>LAT_Reference Products</relationshipLabel>
        <relationshipName>LAT_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RefKey__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;SKU&apos;),  LAT_Product__r.LAT_ExternalID__c,

IF( ISPICKVAL(Type__c, &apos;SchC&apos;),
SchCRef__r.ExternalId__c,

IF(ISPICKVAL(Type__c , &apos;KeyBrand&apos;) ,
KeyBrandRef__r.ExternalId__c,

&apos;&apos; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT Ref Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ReferenceName__c</fullName>
        <formula>IF( NOT(ISBLANK(KeyBrandRef__c)), KeyBrandRef__r.Name, 
IF( NOT(ISBLANK(SchCRef__c)), SchCRef__r.Name, 
LAT_Product__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReferenceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordem__c</fullName>
        <label>Ordem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefKey__c</fullName>
        <formula>IF( ISPICKVAL(Type__c, &apos;SKU&apos;),  SKURef__r.Internal_id__c,

IF( ISPICKVAL(Type__c, &apos;SchC&apos;),
SchCRef__r.ExternalId__c,

IF(ISPICKVAL(Type__c , &apos;KeyBrand&apos;) ,
KeyBrandRef__r.ExternalId__c,

&apos;&apos; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceGrouping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agrupamento</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8) OR (9 AND 10)</booleanFilter>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta SellOut (OFF)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta SellOut (OFF)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta Volume (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volume Contrato</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volume Contrato</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta NF (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Coleta NF (ON)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Reference Products</relationshipLabel>
        <relationshipName>LAT_ReferenceProducts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceName__c</fullName>
        <formula>IF( NOT(ISBLANK(KeyBrandRef__c)), KeyBrandRef__r.Name, 
IF( NOT(ISBLANK(SchCRef__c)), SchCRef__r.Name, 
SKURef__r.Name ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReferenceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKURef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Products selected</description>
        <label>SKU Ref</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>BRA Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reference Products</relationshipLabel>
        <relationshipName>LAT_ReferenceProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchCRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to ScheduleC record</description>
        <label>SchC Ref</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_ScheduleC__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ScheduleC__c</referenceTo>
        <relationshipLabel>Reference Products</relationshipLabel>
        <relationshipName>LAT_ReferenceProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Reference to products</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SKU</fullName>
                    <default>true</default>
                    <label>SKU</label>
                </value>
                <value>
                    <fullName>KeyBrand</fullName>
                </value>
                <value>
                    <fullName>SchC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reference Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SKURef__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_NF_ON</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProduct__c.LAT_Sellin</value>
        </filters>
        <label>Coleta NF (ON)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_SellOut_OFF</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProduct__c.LAT_BR_SellOut</value>
        </filters>
        <label>Coleta SellOut (OFF)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Coleta_Volume_ON</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProduct__c.LAT_Volumen</value>
        </filters>
        <label>Coleta Volume (ON)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pagamento_Produto</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>SKURef__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProduct__c.LAT_ProductPayment</value>
        </filters>
        <label>Pagamento Produto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Volume_Contrato</fullName>
        <columns>ReferenceGrouping__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_Product__c</columns>
        <columns>SchCRef__c</columns>
        <columns>KeyBrandRef__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceProduct__c.LAT_ContractVolume</value>
        </filters>
        <label>Volume Contrato</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Products</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_SellOut</fullName>
        <active>true</active>
        <label>Coleta SellOut (OFF)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_ContractVolume</fullName>
        <active>true</active>
        <label>Volume Contrato</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_ProductPayment</fullName>
        <active>true</active>
        <label>Pagamento Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Sellin</fullName>
        <active>true</active>
        <label>Coleta NF (ON)</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Volumen</fullName>
        <active>true</active>
        <label>Coleta Volume (ON)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>